<resources>
    <string name="app_name">FPL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_right_drawer">Right Drawer</string>
    <string name="search_here">Search By Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Welcome</string>
    <string name="google_map_key">AIzaSyD9Z7v1nUorpekKz263VgE0B6BnCRWJbzA</string>
    <string name="facebook_app_id" translatable="false">372707846617824</string>
    <string name="facebook_login_protocol_scheem">fb372707846617824</string>
    <string name="app_nameone" translatable="false">FPL</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="please_wait">Please wait...</string>
    <string name="update_profile_wait">Please wait your image upload in progress...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">Search your nearby \n Make-up Dentist \n and Hair Stylish.</string>
    <string name="intro_2">Make yourself more beatiful more than you think.</string>
    <string name="intro_3">Hire the best Phtographer &amp; create your moment.</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="server_error">Unable to connect server.</string>
    <string name="closeMsg">Are your sure you want to close FPL?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="jobs_completed">Jobs Completed</string>
    <string name="del_account">Are you sure you want to delete account?</string>
    <string name="completion">% Completion</string>
    <string name="hr_add_on">/hr Add On :</string>
    <string name="fixed_rate_add_on">fixed rate Add On :</string>
    <string name="reviews">REVIEW(</string>
    <string name="book_artist">Book Dentist</string>
    <string name="book_msg">Are you sure to book</string>
    <string name="chats">Chat</string>
    <string name="join_fpl">Join FPL</string>
    <string name="store">Store</string>
    <string name="val_comment">Please enter comment</string>
    <string name="take_image">FPL : Take Image From</string>
    <string name="select_picture">Select Picture</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_address">Please select address.</string>
    <string name="val_title">Please enter title.</string>
    <string name="select_category">Select Category</string>
    <string name="val_email">Please enter valid email id.</string>
    <string name="location_enabled">Couldn\'t get the location. Make sure location is enabled on the device</string>
    <string name="artist_here">Dentist here</string>
    <string name="my_bookings">My Bookings</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="cash_msg">Are you sure want to do cash payment?</string>
    <string name="val_category">Please select category.</string>
    <string name="val_price">Please enter price.</string>
    <string name="val_qty_0">Please enter valid qty not 0 or negative</string>
    <string name="val_qty">Please enter quantity.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Renter password contain at least six characters.</string>
    <string name="val_name">Please enter name.</string>
    <string name="val_fname">Please enter first name.</string>
    <string name="val_lname">Please enter last name.</string>
    <string name="pass_not_match">Password dose not match.</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="decline">Decline</string>
    <string name="decline_msg">Are you sure you want to decline this appointment?</string>
    <string name="waiting_artist">Waiting for artist response</string>
    <string name="request_acc">Request accepted by artist</string>
    <string name="work_inpro">In progress</string>
    <string name="booking_with">Booking With</string>
    <string name="booking_cancel_msg">Are you sure to cancel booking with</string>
    <string name="date">Date:</string>
    <string name="applied">Applied</string>
    <string name="confirm">Confirm</string>
    <string name="approved">Approved</string>
    <string name="complete">Complete</string>
    <string name="inprogress">Inprogress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="confirm_msg">Are you sure you want to confirm the application?</string>
    <string name="complete_msg">Are you sure you want to complete the application?</string>
    <string name="km">KM From You</string>
    <string name="job_id">Request Id:</string>
    <string name="open">Open</string>
    <string name="not_edit_job">You can\'t edit this request because Dentist have already applied</string>
    <string name="delete">Delete</string>
    <string name="delete_job">Are you sure to delete this request?</string>
    <string name="complete_job">Are you sure to complete this request?</string>
    <string name="service">Service #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">DURATION:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="future_bookings">Future Bookings</string>
    <string name="all_category">ALL CATEGORIES</string>
    <string name="get_discount">Get Offer</string>
    <string name="code_copy">Code Copy</string>
    <string name="my_code">Hello, this is my Referral Code</string>
    <string name="opps_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="invoice">Invoice</string>
    <string name="ic_wallet">Wallet</string>
    <string name="ic_payment">Payment</string>
    <string name="fabartist">FPL</string>
    <string name="jobs">Post Request</string>
    <string name="notification">Notifications</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="support">Support</string>
    <string name="home">Services</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="applied_job">Applied Request</string>
    <string name="search_by_artist">Search By Dentist</string>
    <string name="no_application_found">NO APPLICATION FOUND</string>
    <string name="no_service_found">
        Sell your products and services in 3 simple steps!\n
        1. Create your store\n
        2. Customize products and services\n
        3. Set prices\n\nStart selling right away!\nAll FPL must be submitted for approval and meet our "terms and conditions" in order to go live.

    </string>
    <string name="book_now">BOOK NOW</string>
    <string name="quick_chat">QUICK CHAT</string>
    <string name="future_book">FUTURE BOOK</string>
    <string name="image_gallery">IMAGE GALLERY</string>
    <string name="video_gallery">VIDEO GALLERY</string>
    <string name="no_video_available">No Video Available</string>
    <string name="about">ABOUT</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="skills">SKILLS</string>
    <string name="products">PRODUCTS</string>
    <string name="privious_work">PREVIOUS WORK</string>
    <string name="no_chat_history_found">NO CHAT HISTORY FOUND</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="update_job">Update Request</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="update_picture">Update Picture</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="apply_code">APPLY CODE</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="map">Map</string>
    <string name="no_booking_found">NO BOOKING FOUND</string>
    <string name="no_notification_found">NO NOTIFICATION FOUND</string>
    <string name="payment">Payment</string>
    <string name="work_completed">WORK COMPLETED</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="write_code_here">Write Code Here</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="online_payment">ONLINE PAYMENT</string>
    <string name="or">OR</string>
    <string name="cash_payment1">CASH PAYMENT</string>
    <string name="post_job">Post Requests</string>
    <string name="price">Price</string>
    <string name="budget">Budget</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="change">Change</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="full_name">FULL NAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="gender">GENDER</string>
    <string name="password_change">PASSWORD CHANGE</string>
    <string name="set_address">SET ADDRESS</string>
    <string name="enter_your_address">ENTER YOUR ADDRESS</string>
    <string name="city">CITY</string>
    <string name="country">COUNTRY</string>
    <string name="set_location">SET LOCATION</string>
    <string name="signout">SignOut</string>
    <string name="promotion">Promotion</string>
    <string name="apply_code1">Apply Code</string>
    <string name="email_address1">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotten_password">Forgot Password</string>
    <string name="didn_t_have_any_account">Don’t have an account?</string>
    <string name="first_name">First name</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="do_you_have_an_account_already">If you already have an account?</string>
    <string name="write_review">Write Review</string>
    <string name="your_review">Your Review*</string>
    <string name="services_type">Services type:</string>
    <string name="accept">ACCEPT OFFER</string>
    <string name="reject1">REJECT</string>
    <string name="artist_will_soon">Dentist will soon</string>
    <string name="complete1">COMPLETE</string>
    <string name="edit">EDIT</string>
    <string name="decline1">DECLINE</string>
    <string name="cancel_booking">CANCEL BOOKING</string>
    <string name="working_time">Working Time</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="circle_square">CIRCLE_SQUARE</string>
</resources>