<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/post_req_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp18"
            android:layout_height="@dimen/dp18"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp16"
            android:src="@drawable/close">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/robotobold"
            android:text="Crop Image"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp">
        </TextView>
    </RelativeLayout>

    <com.isseiaoki.simplecropview.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        custom:scv_background_color="@color/white"
        custom:scv_crop_mode="fit_image"
        custom:scv_frame_color="@color/colorAccent"
        custom:scv_frame_stroke_weight="1dp"
        custom:scv_guide_color="@color/colorAccent"
        custom:scv_guide_show_mode="show_always"
        custom:scv_guide_stroke_weight="1dp"
        custom:scv_handle_color="@color/colorAccent"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="14dp"
        custom:scv_min_frame_size="50dp"
        custom:scv_overlay_color="@color/white"
        custom:scv_touch_padding="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white" />

    <HorizontalScrollView
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"

            >

            <Button
                android:id="@+id/buttonFitImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/fit_image" />

            <Button
                android:id="@+id/button1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/square" />

            <Button
                android:id="@+id/button3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="3:4" />

            <Button
                android:id="@+id/button4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="4:3" />

            <Button
                android:id="@+id/button9_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="9:16" />

            <Button
                android:id="@+id/button16_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="16:9" />

            <Button
                android:id="@+id/buttonCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="7:5" />

            <Button
                android:id="@+id/buttonFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/free" />

            <Button
                android:id="@+id/buttonCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/circle" />

            <Button
                android:id="@+id/buttonShowCircleButCropAsSquare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/circle_square" />

        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cropImageView"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_photo_library_black_24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonRotateLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:src="@drawable/ic_rotate_left_black_24dp" />

            <ImageButton
                android:id="@+id/buttonRotateRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:src="@drawable/ic_rotate_right_black_24dp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_done_black_24dp" />
    </RelativeLayout>
</LinearLayout>